# fb-pdnstools

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  compile-xlate-msgs.sh  fb-pdnstools.spec.template  requirements.txt  setup.cfg  setup.py  template.spec  xtract-xlate-msgs.sh
.github/actions/debian-install-buildenv/: action.yaml
.github/workflows/: build-packages.yaml  packages.yaml
debian/: .gitignore  changelog  control  rules
etc/: babel.ini
lib/fb_pdnstools/: __init__.py  base_handler.py  common.py  errors.py  record.py  server.py  zone.py
locale/: fb_pdnstools.pot
locale/de/LC_MESSAGES/: fb_pdnstools.po
locale/de_DE/LC_MESSAGES/: fb_pdnstools.po
locale/en/LC_MESSAGES/: fb_pdnstools.po
locale/en_US/LC_MESSAGES/: fb_pdnstools.po
test/: general.py  test_00_fb_pdnstools.py  test_05_common.py  test_10_base_handler.py  test_10_record.py  test_20_zone.py  test_30_server.py  test_40_server.py
