[metadata]
name = fb_pdnstools
description = Modules for handling the PowerDNS API
author = Frank Brehm
author_email = frank@brehm-online.com
url = https://github.com/fbrehm/fb-pdnstools
license = LGPL3+
platforms = posix
provides = fb_pdnstools
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir=
    =lib

install_requires =
    requests
    Babel

setup_requires =
    Babel

packages=find:

[options.packages.find]
where=lib

[compile_catalog]
domain = fb_pdnstools
directory = locale
statistics = 1

[pep8]

max-line-length = 99
